--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.16
-  flutter_slidable: ^2.0.0
+  # Removing flutter_slidable temporarily to get the web build working
 
 dev_dependencies:
   flutter_test:
